src/objects/Custom_Content_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <inlineHelpText>Anything else that might assist content development/production</inlineHelpText>
        <label>Additional Info</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bullets_Page_Numbers__c</fullName>
        <formula>Opportunity__r.Bullets_Page_Numbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Brought from related Opportunity record</inlineHelpText>
        <label>Bullets/Page Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <formula>Opportunity__r.Max_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Opportunity record</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Industry__c</fullName>
        <formula>TEXT( Opportunity__r.Account.Industry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Industry from Account record</inlineHelpText>
        <label>Client Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Content_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Team_Due_Date__c</fullName>
        <inlineHelpText>Date content expected to Production</inlineHelpText>
        <label>Content Team Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <inlineHelpText>When the rep has all the information for the custom content team to work</inlineHelpText>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_level__c</fullName>
        <formula>Opportunity__r.Education_level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What their education is (Bachelor&apos;s degree, or higher or lower), from the Opportunity record</inlineHelpText>
        <label>Education level?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_FG__c</fullName>
        <inlineHelpText>Does Current FG Exist? If available, please attach to email with custom content form.</inlineHelpText>
        <label>Existing FG?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FG_Type_Needed__c</fullName>
        <label>FG Type Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1: Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2: Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3: Scripted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <label>File Format</label>
        <picklist>
            <controllingField>Item_Type__c</controllingField>
            <picklistValues>
                <fullName>MS Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Content License Workbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Lite Workbooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitator Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Outs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Blurb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Workbook Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workbooks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Supervision__c</fullName>
        <formula>Opportunity__r.Level_of_Supervision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What level of supervision are the audience (1st, middle, senior), from the Opportunity</inlineHelpText>
        <label>Level of Supervision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If yes, be sure to attach the logo to the Opportunity record</inlineHelpText>
        <label>Logo Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDA_Received_Date__c</fullName>
        <formula>Opportunity__r.Account.NDA_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Custom Content Items</relationshipLabel>
        <relationshipName>Custom_Content_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Completed_Date__c</fullName>
        <label>Powerpoint Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please uncheck this box if there is no need for a Powerpoint</inlineHelpText>
        <label>Powerpoint Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_sales_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please let the Content team know if this item is intended for the pre-sales process</inlineHelpText>
        <label>Pre-sales Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Training_on_Topic__c</fullName>
        <formula>Opportunity__r.Prior_Training_on_Topic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prior training on the topic (what and when), from Opportunity record</inlineHelpText>
        <label>Prior Training on Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Due_Date__c</fullName>
        <inlineHelpText>Date expected back from the Production team</inlineHelpText>
        <label>Production Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Content_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Status__c</fullName>
        <label>Production Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <label>Program Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <inlineHelpText>Please let the Content team know you&apos;re ideal timeframe</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Client_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only select this if this is promised to the client.</inlineHelpText>
        <label>Requires Client Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <formula>Topic__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Formatting_Instructions__c</fullName>
        <inlineHelpText>Any additional formatting instructions (binding, graphics, etc.)</inlineHelpText>
        <label>Special Formatting Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <formula>Opportunity__r.Target_Audience__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Audience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Custom Content Items</relationshipLabel>
        <relationshipName>Custom_Content_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_detail__c</fullName>
        <formula>Opportunity__r.Trainer_Requested__r.FirstName  + &quot; &quot; +   Opportunity__r.Trainer_Requested__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Opportunity record</inlineHelpText>
        <label>Trainer detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Contact_Info__c</fullName>
        <formula>Opportunity__r.Trainer_Requested__r.Email + BR() + BR() +   Opportunity__r.Trainer_Requested__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Opportunity record</inlineHelpText>
        <label>Training Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event_ID__c</fullName>
        <label>Training Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <formula>Opportunity__r.Training_Location_Contact__r.Account.Name   +&quot;, &quot;+    Opportunity__r.Training_Location_Contact__r.Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Location name &amp; city from the Opportunity record</inlineHelpText>
        <label>Training Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <formula>Opportunity__r.TrainingStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Opportunity record</inlineHelpText>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <label>Custom Content Item</label>
    <listViews>
        <fullName>Andrea_D_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Designer__c</columns>
        <columns>Account__c</columns>
        <columns>Program_Title__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Type__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Angela Williams</value>
        </filters>
        <label>Angela&apos;s Completed Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Andrea_Duncan_s_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Designer__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Opportunity__c</columns>
        <columns>Training_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Andrea Duncan</value>
        </filters>
        <label>Andrea Duncan&apos;s Completed Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Andrea_Duncan_s_Custom_Items</fullName>
        <columns>Content_Designer__c</columns>
        <columns>NAME</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Opportunity__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Andrea Duncan</value>
        </filters>
        <label>Andrea Duncan&apos;s Custom Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Andrea_S_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Designer__c</columns>
        <columns>Account__c</columns>
        <columns>Program_Title__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Type__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Andrea Strong</value>
        </filters>
        <label>Andrea&apos;s Completed Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Andrea_s_Custom_Items</fullName>
        <columns>Content_Designer__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Powerpoint_Needed__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Andrea Strong</value>
        </filters>
        <label>Andrea&apos;s Custom Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Angela_s_Custom_Items</fullName>
        <columns>Content_Designer__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Topic__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Powerpoint_Needed__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>,New,In Progress,Customer Review,Missing Information,Not Required</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Rebecca Humphreys</value>
        </filters>
        <label>Operations - Rebecca&apos;s Custom Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Angela_s_Custom_Items1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Program_Title__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Design_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Angela Williams</value>
        </filters>
        <label>Angela&apos;s Custom Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Chanda_Z_Completed_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Designer__c</columns>
        <columns>Account__c</columns>
        <columns>Program_Title__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Type__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Chanda Zimmerman</value>
        </filters>
        <label>Chanda&apos;s Completed Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Chanda_s_Custom_Items</fullName>
        <columns>Content_Designer__c</columns>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Program_Title__c</columns>
        <columns>Account__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Training_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Missing Information</value>
        </filters>
        <filters>
            <field>Content_Designer__c</field>
            <operation>equals</operation>
            <value>Chanda Zimmerman</value>
        </filters>
        <label>Chanda&apos;s Custom Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Completed_Custom_Content_Items</fullName>
        <columns>NAME</columns>
        <columns>Content_Designer__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Production_Status__c</columns>
        <columns>Topic__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Item_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Custom Content Items</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Content_Items</fullName>
        <columns>NAME</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Production_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Item_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Required,Canceled</value>
        </filters>
        <label>Incomplete Content Items</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Custom_Lite_Workbooks</fullName>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Custom_Content_Item__c.Custom_Lite_Workbooks</value>
        </filters>
        <filters>
            <field>Training_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Incomplete Custom Lite Workbooks</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Facilitator_Guides</fullName>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Custom_Content_Item__c.Facilitator_Guide</value>
        </filters>
        <label>Incomplete Facilitator Guides</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Flyer</fullName>
        <columns>NAME</columns>
        <columns>Item_Type__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Custom_Content_Item__c.Flyer</value>
        </filters>
        <label>Incomplete Flyer</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Other_Custom_Items</fullName>
        <columns>NAME</columns>
        <columns>Design_Status__c</columns>
        <columns>Content_Designer__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Design_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Custom_Content_Item__c.Other_Custom_Item</value>
        </filters>
        <label>Incomplete Other Custom Items</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Content Items</pluralLabel>
    <recordTypes>
        <fullName>Custom_Lite_Workbooks</fullName>
        <active>true</active>
        <description>Custom Lite request items</description>
        <label>Custom Lite Workbooks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facilitator_Guide</fullName>
        <active>true</active>
        <description>Custom materials request for a Facilitator Guide</description>
        <label>Facilitator Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flyer</fullName>
        <active>true</active>
        <description>Custom materials request for a Flyer</description>
        <label>Flyer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Custom_Item</fullName>
        <active>true</active>
        <description>Custom materials request for Handouts, a Marketing Blurb, a Curriculum, or an item not already available</description>
        <label>Other Custom Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outline</fullName>
        <active>true</active>
        <description>Custom materials request for an Outline</description>
        <label>Outline</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workbook</fullName>
        <active>true</active>
        <description>Custom materials request for a Workbook</description>
        <label>Workbook</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>